--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,21 @@
+# Framework FastAPI
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+
+# Base de données
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
+alembic==1.13.0
+
+# Authentification - VERSION MODERNE
+bcrypt==4.1.2  # ← Utiliser bcrypt directement (plus récent)
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
+
+# Configuration
 pydantic==2.5.0
 pydantic-settings==2.1.0
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-requests==2.31.0
 python-dotenv==1.0.0
-alembic==1.13.0
+
+# API externe
+requests==2.31.0
