MVP1: Nettoyage projet + Admin system + Tests automatisés
- Système d'administration avec gestion des utilisateurs
- Page admin (/admin) avec promotion/demotion
- JWT enrichi avec champ 'admin'
- Suite de tests automatisés (18 tests, 100% pass)
- Nettoyage complet du projet (suppression fichiers temporaires)
- README complet
- Scripts de lancement et de tests
- Amélioration .gitignore (Next.js, node_modules)
- Homepage sans auto-redirect

Version finalisee

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,17 @@ htmlcov/
 # OS
 .DS_Store
 Thumbs.db
+
+# Next.js
+.next/
+out/
+build/
+dist/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
