--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,10 @@ jobs:
     - name: Run tests
       env:
         DATABASE_URL: postgresql://fantasy_user:fantasy_password@localhost:5432/nba_fantasy_test
+        POSTGRES_USER: fantasy_user
+        POSTGRES_PASSWORD: fantasy_password
+        POSTGRES_HOST: localhost
+        POSTGRES_DB: nba_fantasy_test
         SECRET_KEY: test-secret-key-for-ci
         ALGORITHM: HS256
         ACCESS_TOKEN_EXPIRE_MINUTES: 30
@@ -123,10 +127,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Test Docker Compose configuration
-      run: docker-compose config
+      run: docker compose config
 
     - name: Build Docker images
-      run: docker-compose build --no-cache
+      run: docker compose build --no-cache
 
   summary:
     name: Tests Summary
