--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,6 +126,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Create .env file
+      run: cp .env.example .env
+
     - name: Test Docker Compose configuration
       run: docker compose config
 
